test/errors/error24.vult
fun foo() {
  val a : 1();
}